; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_ib/extr_mlx5_ib_qp.c_destroy_user_rq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx5/mlx5_ib/extr_mlx5_ib_qp.c_destroy_user_rq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_pd = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.mlx5_ib_rwq = type { i64, i32 }
%struct.mlx5_ib_ucontext = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ib_pd*, %struct.mlx5_ib_rwq*)* @destroy_user_rq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @destroy_user_rq(%struct.ib_pd* %0, %struct.mlx5_ib_rwq* %1) #0 {
  %3 = alloca %struct.ib_pd*, align 8
  %4 = alloca %struct.mlx5_ib_rwq*, align 8
  %5 = alloca %struct.mlx5_ib_ucontext*, align 8
  store %struct.ib_pd* %0, %struct.ib_pd** %3, align 8
  store %struct.mlx5_ib_rwq* %1, %struct.mlx5_ib_rwq** %4, align 8
  %6 = load %struct.ib_pd*, %struct.ib_pd** %3, align 8
  %7 = getelementptr inbounds %struct.ib_pd, %struct.ib_pd* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.mlx5_ib_ucontext* @to_mucontext(i32 %10)
  store %struct.mlx5_ib_ucontext* %11, %struct.mlx5_ib_ucontext** %5, align 8
  %12 = load %struct.mlx5_ib_ucontext*, %struct.mlx5_ib_ucontext** %5, align 8
  %13 = load %struct.mlx5_ib_rwq*, %struct.mlx5_ib_rwq** %4, align 8
  %14 = getelementptr inbounds %struct.mlx5_ib_rwq, %struct.mlx5_ib_rwq* %13, i32 0, i32 1
  %15 = call i32 @mlx5_ib_db_unmap_user(%struct.mlx5_ib_ucontext* %12, i32* %14)
  %16 = load %struct.mlx5_ib_rwq*, %struct.mlx5_ib_rwq** %4, align 8
  %17 = getelementptr inbounds %struct.mlx5_ib_rwq, %struct.mlx5_ib_rwq* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %2
  %21 = load %struct.mlx5_ib_rwq*, %struct.mlx5_ib_rwq** %4, align 8
  %22 = getelementptr inbounds %struct.mlx5_ib_rwq, %struct.mlx5_ib_rwq* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = call i32 @ib_umem_release(i64 %23)
  br label %25

25:                                               ; preds = %20, %2
  ret void
}

declare dso_local %struct.mlx5_ib_ucontext* @to_mucontext(i32) #1

declare dso_local i32 @mlx5_ib_db_unmap_user(%struct.mlx5_ib_ucontext*, i32*) #1

declare dso_local i32 @ib_umem_release(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
